# pixiv-metadata

./: CHANGELOG.md  README.md  README.zh-Hans.md  pyproject.toml  requirements.txt  tox.ini
pixiv_metadata/: __main__.py  example.py
tests/: test_basic.py  test_example.py
